# gitinspector-rs

./: .gitignore  Cargo.toml  README.md  report_test.html  report_v2.html  stats.html  stats.json  stats.md
.github/workflows/: docs.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/formatters/: html.rs  json.rs  markdown.rs  mod.rs  text.rs  xml.rs
apps/cli/templates/: report.html
core/: Cargo.toml
core/src/: analysis.rs  blame.rs  config.rs  filtering.rs  lib.rs  metrics.rs  provider.rs  timeline.rs
core/tests/: benchmark_grading.rs  benchmark_memory.rs
docs/: architecture.md  contributing.md  index.md  ktl-myst-plugin.py  ktl-myst-plugin.yml  myst.yml  roadmap.md  scaling-analysis.md  usage.md
docs/assets/: diagrams.md  mermaid-config.yml  mermaid-global-config.yml
docs/images/: gitinspector-sample.html
docs/plugins/: ktl-myst-plugin.py
docs/plugins/katlas_myst_plugin/: cli.py  mermaid.schema.json
docs/plugins/katlas_myst_plugin/core/: config.py  environment.py
docs/plugins/katlas_myst_plugin/plugins/css/: main.py
docs/plugins/katlas_myst_plugin/plugins/mermaid/: main.py
docs/plugins/katlas_myst_plugin/plugins/mermaid/assets/: default_mermaid_config.yml  ktl-mermaid.css
docs/plugins/katlas_myst_plugin/utils/: unist.py
docs/site-assets/css/: gitinspector.css
report-output/: gitinspector_report.html  pipeline_report.html
scratch/: debug_parse  debug_parse.rs  test_report.html
