[package]
name = "gitinspector-core"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.37", features = ["process", "rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"
