[package]
name = "gitinspector-rs"
version = "1.1.0"
edition = "2021"

[dependencies]
gitinspector-core = { path = "../../core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
askama = "0.16.0"
chrono = "0.4"
indicatif = "0.17"
console = "0.15"
futures = "0.3"
